--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "externalConsole": false,
-      "cwd": "E:/bureau/UBat",
-      "program": "E:/bureau/UBat/Main.exe",
+      "externalConsole": true,
+      "cwd": "e:/bureau/UBat",
+      "program": "e:/bureau/UBat/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
