modified:   .vscode/launch.json 	modified:   Header/Config.hpp 	modified:   Header/FileVerif.hpp 	modified:   Main.cpp 	new file:   Main.exe

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "stopAtEntry": false,
       "externalConsole": true,
       "cwd": "e:/bureau/UBat",
-      "program": "e:/bureau/UBat/build/Debug/outDebug",
+      "program": "E:/bureau/UBat/Main.exe",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
